Display all posts with caption and image

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,1 +1,9 @@
 %h1 Pictugram
+
+%table
+  %tbody
+    - @posts.each do |post|
+      %tr
+        %td= post.caption
+      %tr
+        %td= image_tag post.image.url(:medium)
