--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,9 +1,10 @@
-%h1 Pictugram
-
-%table
-  %tbody
-    - @posts.each do |post|
-      %tr
-        %td= post.caption
-      %tr
-        %td= image_tag post.image.url(:medium)
+.posts-wrapper.row
+  - @posts.each do |post|
+    .post
+      .post-head
+        .name
+          Jakub Piotrowski
+      .image.center-block
+        = link_to (image_tag post.image.url(:medium), class: 'img-responsive'), post_path(post)
+      %p.caption
+        = post.caption
