--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,4 +1,9 @@
-= simple_form_for @post do |f|
-  = f.input :caption
-  = f.input :image, as: :file
-  = f.button :submit
+.form-wrapper
+  = simple_form_for @post, html: { class: 'form-horizontal', multipart: true } do |f|
+    .form-group
+      = f.input :image, as: :file
+    .form-group.text-center
+      = f.label :caption
+      = f.input :caption, label: false
+    .form-group.text-center
+      = f.button :submit, class: 'btn-success'
