--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -8,4 +8,5 @@
     %p.caption
       = @post.caption
     .text-center
+      = link_to "Edit Post", edit_post_path(@post), { class: 'btn btn-primary'}
       = link_to "Return", posts_path, { class: 'btn btn-default'}
