--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -7,6 +7,9 @@
       = image_tag @post.image.url(:medium)
     %p.caption
       = @post.caption
-    .text-center
-      = link_to "Edit Post", edit_post_path(@post), { class: 'btn btn-primary'}
-      = link_to "Return", posts_path, { class: 'btn btn-default'}
+    .pull-left
+      = link_to "Edit Post", edit_post_path(@post), class: 'btn btn-primary'
+      = link_to "Delete Post", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" },
+        class: 'btn btn-danger'
+    .pull-right
+      = link_to "Return", posts_path, class: 'btn btn-default'
