--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -7,9 +7,10 @@
       = image_tag @post.image.url(:medium)
     %p.caption
       = @post.caption
-    .pull-left
-      = link_to "Edit Post", edit_post_path(@post), class: 'btn btn-primary'
-      = link_to "Delete Post", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" },
-        class: 'btn btn-danger'
+    - if @post.user_id == current_user.id
+      .pull-left
+        = link_to "Edit Post", edit_post_path(@post), class: 'btn btn-primary'
+        = link_to "Delete Post", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" },
+          class: 'btn btn-danger'
     .pull-right
       = link_to "Return", posts_path, class: 'btn btn-default'
