--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,16 +1,9 @@
-.posts-wrapper.row
-  .post
-    .post-head
-      .name
-        Jakub Piotrowski
-    .image.center-block
-      = image_tag @post.image.url(:medium)
-    %p.caption
-      = @post.caption
-    - if @post.user_id == current_user.id
-      .pull-left
-        = link_to "Edit Post", edit_post_path(@post), class: 'btn btn-primary'
-        = link_to "Delete Post", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" },
-          class: 'btn btn-danger'
-    .pull-right
-      = link_to "Return", posts_path, class: 'btn btn-default'
+= render 'post', post: @post
+- if @post.user.id == current_user.id
+  .text-center.edit-links
+    = link_to "Cancel", posts_path
+    |
+    = link_to "Edit Post", edit_post_path(@post)
+- else
+  .text-center.edit-links
+    =link_to "Cancel", posts_path
