--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -17,9 +17,10 @@
         .comments{id: "comments_#{post.id}"}
           - if post.comments
             = render post.comments, post: post
-    .comment-like-form.row
-      .like-button.col-sm-1
-        %span(class="glyphicon glyphicon-heart-empty")
-      .comment-form.col-sm-11
-        = form_for([post, post.comments.build], remote: true) do |f|
-          = f.text_field :content, placeholder: 'Add a comment...', class: "comment-content", id: "comment_content_#{post.id}"
+    - if user_signed_in?
+      .comment-like-form.row
+        .like-button.col-sm-1
+          %span(class="glyphicon glyphicon-heart-empty")
+        .comment-form.col-sm-11
+          = form_for([post, post.comments.build], remote: true) do |f|
+            = f.text_field :content, placeholder: 'Add a comment...', class: "comment-content", id: "comment_content_#{post.id}"
