--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,12 +15,25 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+html {
+    height: 100%;
+}
+
 body {
+  height: 100%;
   background-color: #fafafa;
   font-family: proxima-nova, 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
 
+.alert {
+  margin-bottom: 0px;
+}
+
 /* ## NAVBAR CUSTOMISATIONS ## */
+
+.navbar {
+  margin-bottom: 0px;
+}
 
 .navbar-brand {
   a {
@@ -151,16 +164,46 @@ body {
 
 /* ## Wrapper and styling for the new and edit views ## */
 
-.form-wrapper {
-  width: 60%;
-  margin: 20px auto;
-  background-color: #fff;
-  padding: 40px;
-  border: 1px solid #eeefef;
-  border-radius: 3px;
-}
-
 .edit-links {
   margin-top: 20px;
   margin-bottom: 40px;
+}
+
+.container {
+  width: 100%;
+  height: 93%;
+}
+
+.registration-bg, .login-bg {
+  padding-top: 4em;
+  height: 100%;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.registration-bg {
+  background-image: image-url('regbackg.jpg');
+}
+
+.login-bg {
+  background-image: image-url('loginbg.jpg');
+}
+
+.log-in {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  border: none;
+}
+
+.panel {
+  border-radius: 8px;
+}
+
+.panel-heading {
+  h1 {
+    text-align: center;
+  }
 }
