Changed post creation and edit layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -207,3 +207,12 @@ body {
     text-align: center;
   }
 }
+
+#image-preview {
+  margin: 0px auto;
+}
+
+#post-image {
+  padding: 1em;
+  margin: 0px auto;
+}
