--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,6 +84,14 @@ body {
     }
     .user-name {
       font-weight: 500;
+      img {
+        float: left;
+        width: 40px;
+        height: 40px;
+        position: relative;
+        right: 10px;
+        bottom: 10px;
+      }
     }
     .time-ago {
       color: #A5A7AA;
