--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -3,6 +3,7 @@
     .post-head
       .thumb-img
       .user-name
+        = profile_avatar_select(post.user)
         = link_to post.user.user_name, profile_path(post.user.user_name)
       .time-ago
         = time_ago_in_words post.created_at
